Added some page styling

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 </nav>
 <div class="hero">
 <div class="hero-txt">
-<h2>Hello I'm Chidimma Okoloigwe</h2>
- <h2>A Frontend Developer</h2>
+<h2 class="name">Hello I'm Chidimma Okoloigwe</h2>
+ <h2 class="office">A Frontend Developer</h2>
 <h3>I'm versed in <span id="text"> </span></h3>
     <p> I am an innovative developer and i love using my technical expertise in web technologies to make accessible and responsive web designs for improved user experiences. I am a goal-orientend and dedicated frontend developer who enjoys creating maintainable and responsive web designs with
     HTML, CSS Javascript and other technologies for generating user-friendly interfaces. i have always been curious about how the internet and websites work, and this spurred my passion to be part of the process,
