--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@500,300,400&f[]=clash-display@400,700,500&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="home-body">
     <div class="preloader">
         <h1>Chidimma's portfolio</h1>
     </div>
